# agent_workshop

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
founder_dashboard/: __init__.py  agent.py  cli.py  config.py  data_sources.py  models.py  notes_ui.py  output_targets.py  rendering.py  scheduler.py  synthesis.py
